# chandoilamroi

./: README.md  baocao1.md
API-thongtindoanhnghiep/: .env.template  .gitignore  .pre-commit-config.yaml  requirements.txt  test_hung_yen_scanner.py
API-thongtindoanhnghiep/.github/workflows/: ci.yml
API-thongtindoanhnghiep/scripts/: collect_hai_phong.py  collect_hai_phong_resume.py  config.py  hung_yen_enhanced_scanner.py  hung_yen_scanner.py  process_mst_excel.py
API-thongtindoanhnghiep/src/thongtindoanhnghiep/: thongtindoanhnghiep_api_client.py
cccd/: .env.example  .eslintrc.js  .gitignore  Dockerfile  FINAL_COMPLETION_REPORT.md  FINAL_REPORT.md  README.md  docker-compose.yml  jest.config.js
cccd/.github/workflows/: ci.yml
cccd/docs/: API_DOCUMENTATION.md  CLI_DOCUMENTATION.md
cccd/frontend/: tailwind.config.js
cccd/frontend/src/: App.css  App.tsx  index.css
cccd/src/: main.js
cccd/src/cli/: cli_helpers.js  commands.js  commands_export.js  commands_new.js
cccd/src/config/: cccd_config.js
cccd/src/services/: cccd_analyzer_service.js  cccd_generator_service.js  monitoring_service.js  monitoring_service_fixed.js
cccd/src/tests/: analyzer.test.js  api.test.js  api_comprehensive.test.js  cli.test.js  cli_comprehensive.test.js  cli_edge_cases.test.js  cli_unit.test.js  cli_unit_final.test.js  cli_unit_fixed.test.js  cli_unit_working.test.js  config.test.js  e2e.test.js  e2e_comprehensive.test.js  generator.test.js  logger.test.js  monitoring.test.js  monitoring_fixed.test.js  performance.test.js  setup.js
cccd/src/utils/: logger.js
check-cccd/: .env  .env.example  .env.production  requirements.txt  run_dev.py
check-cccd/input/: danh_sach_cccd.xlsx
check-cccd/output/: ket_qua_tra_cuu.json  ket_qua_tra_cuu.xlsx
ta0-cccd/: cccd_config.py  cccd_core.py  cccd_metadata.py
tool-check-cmnd-to-bhxh 5/: .env.sample  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
tool-check-cmnd-to-bhxh 5/data/: create_sample.py  data-input-sample.xlsx  tinh-thanh.json
tool-check-cmnd-to-bhxh 5/scripts/: run.bat  run.sh
tool-check-cmnd-to-bhxh 5/src/: config.py
tool-check-cmnd-to-bhxh 5/src/core/: captcha_solver.py  excel_handler.py  province_finder.py
tool-check-cmnd-to-bhxh 5/tests/unit/: test_excel_handler.py  test_province_finder.py
